[package]
name = "spotifm"
version = "2.1.0"
authors = ["waveplate"]
license = "GPL"
description = "stream spotify via icecast"
keywords = ["spotify"]
repository = "https://github.com/waveplate/spotifm"
readme = "README.md"
edition = "2021"
rust-version = "1.81"

[workspace]

[[bin]]
name = "spotifm"
path = "src/main.rs"
doc = false

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", tag = "v0.6.0", features = [
    "alsa-backend",
    "portaudio-backend", 
    "pulseaudio-backend",
] }
librespot-oauth = "0.6.0"
tokio = { version = "1", features = ["macros", "signal", "sync", "process"] }
signal-hook = "*"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde_derive = "1"
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
serde_json = "1.0.51"
env_logger = "0.7.1"
chrono = "*"
iconv = "*"
rand = "*"
data-encoding = "2.5"
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = "0.4"
sha1 = "0.10"
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }
thiserror = "2.0"
url = "2.2"
oauth2 = "4.4"
rustls = { version = "0.23.23", features = ["ring"] }

[dependencies.rspotify]
version = "0.13.3"
default-features = false
features = ["client-ureq", "ureq-rustls-tls"]
